--- a/assets/styles/mybooking-engine-product-multiple-rate-list.css
+++ b/assets/styles/mybooking-engine-product-multiple-rate-list.css
@@ -79,6 +79,7 @@
 .mybooking-product_multiple_rate_list .mybooking-product_custom-message {
   font-size: 12px;
   font-weight: 600;
+  line-height: 1;
 }
 
 .mybooking-product_multiple_rate_list .mybooking-product_header {
